--- a/chmc_wbms/templates/associated_doctor/assocdoc_base.html
+++ b/chmc_wbms/templates/associated_doctor/assocdoc_base.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
     <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.ico' %}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>{% block title %}Associated Doctor Dashboard{% endblock %}</title>
+    <title>{% block title %}Admin Dashboard{% endblock %}</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -19,6 +19,8 @@
     <link href="{% static 'assets/css/light-bootstrap-dashboard.css' %} " rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'assets/css/demo.css' %}" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/font.css' %}">
@@ -79,5 +81,6 @@
 <script src="{% static 'assets/js/plugins/bootstrap-notify.js' %}"></script>
 <script src="{% static 'assets/js/light-bootstrap-dashboard.js?v=2.0.0' %} " type="text/javascript"></script>
 <script src="{% static 'assets/js/demo.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 
 </html>
