--- a/chmc_wbms/templates/associated_doctor/includes/assocdoc_navbar.html
+++ b/chmc_wbms/templates/associated_doctor/includes/assocdoc_navbar.html
@@ -28,7 +28,7 @@
             </a>
             <div class="rowlinetwo_one">
                 <div class="linetwo_one"></div>
-                <h4 class="ui heading size-headinglg-logout"><a href="{% url 'employee_logout' %}" data-bs-toggle="modal" data-bs-target="#exampleModal">LOGOUT</a></h4>
+                <h4 class="ui heading size-headinglg-logout"><a href="{% url 'assocdoc_logout' %}" data-bs-toggle="modal" data-bs-target="#exampleModal">LOGOUT</a></h4>
             </div>
 
             <!-- Modal -->
@@ -43,7 +43,7 @@
                             Are you sure you want to Logout?
                         </div>
                         <div class="modal-footer">
-                            <a href="{% url 'employee_logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
+                            <a href="{% url 'assocdoc_logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                         </div>
                         <div class="modal-footer">
                             <!-- Edit button redirects to an edit view -->
-                            <a href="{% url 'edit_profile' account.id %}" class="btn btn-primary">Edit Profile</a>
+                            <a href="{% url 'assocdoc_edit_profile' account.id %}" class="btn btn-primary">Edit Profile</a>
                                         
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
